# CalculatorGUI

./: .gitignore  CMakeLists.txt
.github/workflows/: windows-build.yml
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/CalculatorGUI.app/Contents/: Info.plist
build-release/CalculatorGUI.app/Contents/Frameworks/: libharfbuzz.0.dylib  libpcre2-16.0.dylib  libpcre2-8.0.dylib  libzstd.1.dylib
build-release/CalculatorGUI.app/Contents/MacOS/: CalculatorGUI
build-release/CalculatorGUI.app/Contents/PlugIns/imageformats/: libqpdf.dylib  libqsvg.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib
build-release/CalculatorGUI_autogen/: deps  mocs_compilation.cpp
build-release/CalculatorGUI_autogen/6YEA5652QU/: moc_calculator_widget.cpp  moc_calculator_widget.cpp.d
include/: calculator.h  calculator_widget.h
src/: calculator.cpp  calculator_widget.cpp  main.cpp
